+ And here's the big scrollbar commit... So, it's ugly (needs some CSS love!), it has bugs (double-clicking, clicking the scrollbar without dragging, etc.), but it works as expected. And although it also works on touch devices, it's so slow and user-unfriendly that I've disabled it. (sbox.js, index.css) * As you can see, all single and double quotes are now swapped, and it does save 50+ bytes when concatenated with another files that uses single quotes everywhere, such as script.js. (sbox.js)
@ Current sbox size: 2946 bytes, so that's a 750+ byte increase due to the addition of the scrollbar code, but you may want to remove from that the 600+ bytes I saved in earlier commits today. So, the final gzipped, minified and concatenated file is only about 100 bytes larger than before. Then again -- if I remove the scrollbar code, we'll definitely save 750 bytes. What's best..?

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1343,8 +1343,7 @@ select.sb
 		display: block
 		font-size: 1em
 		margin: 0
-		overflow-x: hidden
-		overflow-y: auto
+		overflow: hidden
 		position: absolute
 		z-index: 999
 		box-shadow: 0 2px 5px rgba(0,0,0, .3)
@@ -1389,6 +1388,34 @@ select.sb
 			border-radius: 5px 5px 0 0
 		li.last .item
 			border-radius: 0 0 5px 5px
+
+
+	/* custom scrollbar */
+	.overview
+		overflow: hidden
+		list-style: none
+		position: relative
+		left, top, padding, margin: 0
+	.scrollbar
+		position: absolute
+		width: 11px
+		background: #f0f3f0
+		background-position: 0 0
+		float: right
+	.track
+		position: relative
+		height: 100%
+		width: 11px
+	.thumb
+		background: #ddc
+		border-radius: 4px
+		height: 20px
+		width: 13px
+		cursor: pointer
+		overflow: hidden
+		position: absolute
+		top: 0
+		left: -1px
 
 .cat .sbox
 	font-size: 14px
